Fixing z-index of icons

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -74,6 +74,7 @@ code,
   position: fixed;
   right: 0;
   top: 0;
+  z-index: 999;
   .content {
     margin: 0 auto;
     max-width: $width;
